load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/filesystem/*.hpp",
]

cc_library(
    name = "filesystem_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "filesystem",
    visibility = ["//visibility:public"],
    includes = ["include"],
    defines = ["BOOST_ALL_NO_LIB"],
    hdrs = glob(_public_hdrs),
    srcs = glob(["src/*.cpp", "src/*.hpp"]),
    deps = [
        ":filesystem_internal",
        "@boost//config",
        "@boost//system",
        "@boost//assert",
        "@boost//type_traits",
        "@boost//core",
        "@boost//iterator",
        "@boost//io",
        "@boost//functional",
        "@boost//smart_ptr",
        "@boost//detail",
    ],
)
