load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/filesystem/*.hpp",
]

cc_library(
    name = "filesystem_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "filesystem",
    visibility = ["//visibility:public"],
    includes = ["include"],
    defines = ["BOOST_ALL_NO_LIB"],
    hdrs = glob(_public_hdrs),
    srcs = glob(["src/*.cpp", "src/*.hpp"]),
    deps = [
        ":filesystem_internal",
        "@boost//libs/config",
        "@boost//libs/system",
        "@boost//libs/assert",
        "@boost//libs/type_traits",
        "@boost//libs/core",
        "@boost//libs/iterator",
        "@boost//libs/io",
        "@boost//libs/functional",
        "@boost//libs/smart_ptr",
        "@boost//libs/detail",
    ],
)
